<resources>

    <string name="app_name">Sortir à Metz</string>

    <string name="google_maps_API_key">AIzaSyDHvXDWApU4KEkJDn1h4vBnDTwS0g9FQTI</string>
    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_nom">Nom du site</string>
    <string name="prendre_photo">Prendre photo</string>
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_longitude"> Longitude</string>
    <string name="prompt_adresse_postale">Adresse Postale</string>
    <string name="prompt_categorie">Catégorie</string>
    <string name="prompt_resume">Résumé</string>
    <string name="action_ajouter_site">Ajouter</string>
    <string name="action_modifier_site">Modifier</string>
    <string name="image_site">Image du Site</string>
    <string name="nom_du_site">Nom du Site</string>
    <string name="send_to">Partager</string>
    <string name="annuler_ajouter_site">Annuler</string>
    <string name="labelButtonSync"> <![CDATA[<--- Synchroniser --->]]></string>
    <string name="ajouter_categorie">Nouvelle categorie</string>
    <string name="nouvelle_cat_gorie">Nouvelle catégorie</string>
    <string name="prompt_selectCat">-- Sélectionner une catégorie --</string>
    <string name="aucun_site_ajout">Aucun ajout effectué</string>
    <string name="labelButtonView" >Rafraichir</string>
    <string name="labelTitreSync">Sauvegarde en ligne</string>
    <string name="labelTitreLocalSync">Base locale</string>
</resources>
